--- a/Index.html
+++ b/Index.html
@@ -156,13 +156,13 @@
                     </li>
                     <li class="contact-info">
                         <i class="fa-solid fa-globe"></i>
-                        <p>WWW.websitecoffeeshop.com </p>
+                        <p>websitecoffeeshop.com </p>
                     </li>
                 </ul>
                 <form action="#"class="contact-form">
-                    <input type="text"placeholder="your name" class="form-input"required>
-                    <input type="email"placeholder="your email" class="form-input"required>
-                    <textarea placeholder="your message" class="form-input"required></textarea>
+                    <input type="text"placeholder=" name" class="form-input"required>
+                    <input type="email"placeholder=" email" class="form-input"required>
+                    <textarea placeholder=" message" class="form-input"required></textarea>
                     <button class="submit-button">submit</button>
                 </form>
             </div>
