--- a/index.html
+++ b/index.html
@@ -104,12 +104,13 @@
             </div>
         </section>
         <!--map section-->
+        <section>
         <div class="box">
             <h1>Our Location</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi aliquid cupiditate ipsa beatae perspiciatis autem consequuntur alias dolorum rerum hic, deserunt accusantium illum laborum aperiam eos dolorem, suscipit vel. Dolor?</p>
         </div>
-        <i frame src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37828.32774386814!2d77.49615551827465!3d9.17779436339574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0697eb07d96005%3A0x3d454d43a9559d3d!2sSankarankoil%2C%20Tamil%20Nadu%20627756!5e1!3m2!1sen!2sin!4v1756794358125!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+        <i frame src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37828.32774386814!2d77.49615551827465!3d9.17779436339574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0697eb07d96005%3A0x3d454d43a9559d3d!2sSankarankoil%2C%20Tamil%20Nadu%20627756!5e1!3m2!1sen!2sin!4v1756794358125!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></i frame>
+        </section>
         <!--Gallery section-->
         <section class="gallery-section"id="Gallery">
             <h2 class="section-title">Gallery</h2>
