--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                     </li>
                 </ul>
                 <form action="#"class="contact-form">
-                    <input type="text"placeholder=" name" class="form-input"required>
-                    <input type="email"placeholder=" email" class="form-input"required>
-                    <textarea placeholder=" message" class="form-input"required></textarea>
+                    <input type="text"placeholder=" Name" class="form-input"required>
+                    <input type="email"placeholder=" Email" class="form-input"required>
+                    <textarea placeholder=" Message" class="form-input"required></textarea>
                     <button class="submit-button">submit</button>
                 </form>
             </div>
