--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         </title>
         <link rel="stylesheet"href="style.css">
         <link rel="icon"href="coffee.webp">
+        <link rel="stylesheet"href:"https://Cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     </head>
     <body>
        <header>
@@ -13,6 +14,7 @@
                 <h2 class="logo-text">☕coffee</h2>
             </a>
             <ul class="nav-menu">
+                <button id="menu-open-button"class="fas fa-bars"></button>
                 <li class="nav-item">
                     <a href="#"class="nav-link">Home</a>
                 </li>
@@ -29,6 +31,7 @@
                     <a href="#Contact"class="nav-link">Contact</a>
                 </li>
             </ul>
+             <button id="menu-open-button"class="fas fa-bars"></button>
         </nav>
        </header>
        <main>
